<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border"
        android:layout_marginTop="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/write_email"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/border"
                app:layout_constraintVertical_bias="0.55"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_person"
                    android:maxLines="1"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/transparent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPass"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/write_pass"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/border"
                app:layout_constraintVertical_bias="0.67"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_lock"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/transparent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="411dp"
                android:layout_height="350dp"
                android:src="@drawable/ic_logopidetucomida"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:srcCompat="@tools:sample/avatars"
                app:tint="@color/green" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:background="@drawable/border"
                app:backgroundTint="@color/green"
                app:layout_constraintTop_toBottomOf="@id/tlPass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintVertical_bias="0.2"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/green"
                android:background="@drawable/border"
                app:backgroundTint="@color/white"
                android:shadowColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tlPass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintVertical_bias="0.2"/>

            <TextView
                android:id="@+id/tvNoHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/mbEnter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintVertical_bias="0.3"
                android:text="@string/no_have_account"
                android:textColor="@color/black"
                android:textStyle="italic"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/green"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/mbSkip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNoHaveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintVertical_bias="0.3"
                android:background="@color/transparent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>