<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/tlMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <include
            android:id="@+id/toolBar"
            layout="@layout/layout_toolbar" />
    </com.google.android.material.appbar.CollapsingToolbarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/border"
                android:hint="@string/email"
                android:id="@+id/tiEmail"
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:drawableStart="@drawable/ic_email"
                    android:backgroundTint="@color/transparent"
                    android:background="@color/transparent" android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/border"
                android:hint="@string/password"
                android:id="@+id/tiPass"
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiEmail"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/transparent"
                    android:drawableStart="@drawable/ic_key"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:hint="@string/repeat_pass"
                android:id="@+id/tiRepeatPass"
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiPass"
                app:layout_constraintVertical_bias="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRepeatPass"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/transparent"
                    android:drawableStart="@drawable/ic_key"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/border"
                android:hint="@string/name"
                android:id="@+id/tiName"
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiRepeatPass"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/transparent"
                    android:drawableStart="@drawable/ic_person"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
            android:background="@drawable/border"
            android:hint="@string/last_name"
            android:id="@+id/tiLastName"
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiName"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
            android:background="@drawable/border"
            android:hint="@string/adress"
            android:id="@+id/tiAdress"
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiLastName"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAdress"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:drawableStart="@drawable/ic_room"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
            android:background="@drawable/border"
            android:hint="@string/number_phone"
            android:id="@+id/tiNumberPhone"
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiAdress"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp"
            app:counterMaxLength="9"
            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumberPhone"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:drawableStart="@drawable/ic_phone"
                android:inputType="number"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:background="@drawable/border"
                android:id="@+id/mbRegister"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                app:backgroundTint="@color/green"
                app:layout_constraintTop_toBottomOf="@id/tiNumberPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/tvNoConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_red"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivNoConnection"
                app:layout_constraintVertical_bias="0.65"
                tools:text="No se pudo establecer conexion"/>

            <ImageView
                android:id="@+id/ivNoConnection"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_cloudoff"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.349"
                app:tint="@color/dark_red" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>





